target/generated-sources/antlr4/target/antlr4/NPPParser.java
// Generated from NPP.g4 by ANTLR 4.4

	//package target.antlr4;
	//System.out.println("Grammar started");
	// what ever you will write here will be placed at the top of the generated files like lexer, visitor, parser

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__31=1, T__30=2, T__29=3, T__28=4, T__27=5, T__26=6, T__25=7, T__24=8, 
		T__23=9, T__22=10, T__21=11, T__20=12, T__19=13, T__18=14, T__17=15, T__16=16, 
		T__15=17, T__14=18, T__13=19, T__12=20, T__11=21, T__10=22, T__9=23, T__8=24, 
		T__7=25, T__6=26, T__5=27, T__4=28, T__3=29, T__2=30, T__1=31, T__0=32, 
		MUL=33, DIV=34, ADD=35, SUB=36, LESS=37, GRT=38, LE=39, GE=40, EE=41, 
		NE=42, IDENTIFIER=43, STRING=44, NUMBER=45, WS=46, NEWLINE=47;
	public static final String[] tokenNames = {
		"<INVALID>", "'potential'", "'decision'", "'interface'", "'label'", "'true'", 
		"'subtype'", "'class'", "';'", "'{'", "'='", "'extends'", "'}'", "'number'", 
		"'position'", "'states'", "'('", "','", "'state_values'", "'false'", "'continuous'", 
		"'discrete'", "'utility'", "'implements'", "'abstract'", "'boolean'", 
		"'interval'", "':'", "'|'", "'node'", "'data'", "'instance'", "')'", "'*'", 
		"'/'", "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "IDENTIFIER", 
		"STRING", "NUMBER", "WS", "NEWLINE"
	};
	public static final int
		RULE_prog = 0, RULE_fileStructureDefn = 1, RULE_classStructure = 2, RULE_abstractClassStructure = 3, 
		RULE_interfaceStructure = 4, RULE_interfaceName = 5, RULE_interfaceElement = 6, 
		RULE_parentClass = 7, RULE_superClassName = 8, RULE_parentInterfaces = 9, 
		RULE_interfaceNameList = 10, RULE_className = 11, RULE_classElement = 12, 
		RULE_domainElement = 13, RULE_classInstance = 14, RULE_instanceName = 15, 
		RULE_instanceAttribute = 16, RULE_bindings = 17, RULE_inputBindings = 18, 
		RULE_inputBinding = 19, RULE_outputBindings = 20, RULE_outputBinding = 21, 
		RULE_actualName = 22, RULE_formalName = 23, RULE_basicNode = 24, RULE_nodeName = 25, 
		RULE_nodeAttribute = 26, RULE_state = 27, RULE_label = 28, RULE_position = 29, 
		RULE_xCoordinate = 30, RULE_yCoordinate = 31, RULE_subtype = 32, RULE_stateValues = 33, 
		RULE_potential = 34, RULE_edgeInformation = 35, RULE_childNodes = 36, 
		RULE_parentNodes = 37, RULE_data = 38, RULE_tuple = 39, RULE_tuple1 = 40, 
		RULE_potentialAttribute = 41, RULE_attribute = 42, RULE_stmt1 = 43, RULE_stmt = 44, 
		RULE_attribName = 45, RULE_attribValue = 46, RULE_formula = 47, RULE_function_call = 48, 
		RULE_parameters = 49, RULE_parameter = 50, RULE_expr = 51, RULE_boolExpr = 52, 
		RULE_sumExpr = 53, RULE_productExpr = 54, RULE_primary = 55, RULE_literal = 56;
	public static final String[] ruleNames = {
		"prog", "fileStructureDefn", "classStructure", "abstractClassStructure", 
		"interfaceStructure", "interfaceName", "interfaceElement", "parentClass", 
		"superClassName", "parentInterfaces", "interfaceNameList", "className", 
		"classElement", "domainElement", "classInstance", "instanceName", "instanceAttribute", 
		"bindings", "inputBindings", "inputBinding", "outputBindings", "outputBinding", 
		"actualName", "formalName", "basicNode", "nodeName", "nodeAttribute", 
		"state", "label", "position", "xCoordinate", "yCoordinate", "subtype", 
		"stateValues", "potential", "edgeInformation", "childNodes", "parentNodes", 
		"data", "tuple", "tuple1", "potentialAttribute", "attribute", "stmt1", 
		"stmt", "attribName", "attribValue", "formula", "function_call", "parameters", 
		"parameter", "expr", "boolExpr", "sumExpr", "productExpr", "primary", 
		"literal"
	};

	@Override
	public String getGrammarFileName() { return "NPP.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		//System.out.println("Grammar started");
		/* what ever you will write here will be placed at the body as a statement/series of statements/method/class
			of the generated files like lexer, parser
		*/
	//	StringBuilder bufferTuple = new StringBuilder();

	public NPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public FileStructureDefnContext fileStructureDefn() {
			return getRuleContext(FileStructureDefnContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NPPVisitor ) return ((NPPVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); fileStructureDefn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileStructureDefnContext extends ParserRuleContext {
		public String str;
		public ClassStructureContext classStructure;
		public AbstractClassStructureContext abstractClassStructure;
		public InterfaceStructureContext interfaceStructure;
		public AbstractClassStructureContext abstractClassStructure() {
			return getRuleContext(AbstractClassStructureContext.class,0);
		}
		public InterfaceStructureContext interfaceStructure() {
			return getRuleContext(InterfaceStructureContext.class,0);
		}
		public ClassStructureContext classStructure() {
			return getRuleContext(ClassStructureContext.class,0);
		}
		public FileStructureDefnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileStructureDefn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).enterFileStructureDefn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).exitFileStructureDefn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NPPVisitor ) return ((NPPVisitor<? extends T>)visitor).visitFileStructureDefn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileStructureDefnContext fileStructureDefn() throws RecognitionException {
		FileStructureDefnContext _localctx = new FileStructureDefnContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fileStructureDefn);
		StringBuilder bufferFileStructureDefn = new StringBuilder();
		try {
			setState(125);
			switch (_input.LA(1)) {
			case T__25:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); ((FileStructureDefnContext)_localctx).classStructure = classStructure();
				bufferFileStructureDefn.append(((FileStructureDefnContext)_localctx).classStructure.str);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(119); ((FileStructureDefnContext)_localctx).abstractClassStructure = abstractClassStructure();
				bufferFileStructureDefn.append(((FileStructureDefnContext)_localctx).abstractClassStructure.str);
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 3);
				{
				setState(122); ((FileStructureDefnContext)_localctx).interfaceStructure = interfaceStructure();
				bufferFileStructureDefn.append(((FileStructureDefnContext)_localctx).interfaceStructure.str);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			((FileStructureDefnContext)_localctx).str =  bufferFileStructureDefn.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassStructureContext extends ParserRuleContext {
		public String str;
		public ClassNameContext className;
		public ParentClassContext parentClass;
		public ParentInterfacesContext parentInterfaces;
		public ClassElementContext classElement;
		public ParentClassContext parentClass() {
			return getRuleContext(ParentClassContext.class,0);
		}
		public ParentInterfacesContext parentInterfaces() {
			return getRuleContext(ParentInterfacesContext.class,0);
		}
		public ClassElementContext classElement(int i) {
			return getRuleContext(ClassElementContext.class,i);
		}
		public List<ClassElementContext> classElement() {
			return getRuleContexts(ClassElementContext.class);
		}
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public ClassStructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classStructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).enterClassStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).exitClassStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NPPVisitor ) return ((NPPVisitor<? extends T>)visitor).visitClassStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassStructureContext classStructure() throws RecognitionException {
		ClassStructureContext _localctx = new ClassStructureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classStructure);
		StringBuilder bufferClassStructure = new StringBuilder();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(T__25);
			setState(128); ((ClassStructureContext)_localctx).className = className();
			setState(129); ((ClassStructureContext)_localctx).parentClass = parentClass();
			setState(130); ((ClassStructureContext)_localctx).parentInterfaces = parentInterfaces();
			setState(131); match(T__23);
			bufferClassStructure.append("class " + (((ClassStructureContext)_localctx).className!=null?_input.getText(((ClassStructureContext)_localctx).className.start,((ClassStructureContext)_localctx).className.stop):null) + ((ClassStructureContext)_localctx).parentClass.str + " " + ((ClassStructureContext)_localctx).parentInterfaces.str + "\n{\n");
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__30) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__3) | (1L << T__1) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(133); ((ClassStructureContext)_localctx).classElement = classElement();
				bufferClassStructure.append(((ClassStructureContext)_localctx).classElement.str + "\n");
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141); match(T__20);
			bufferClassStructure.append("}\n");
			}
			((ClassStructureContext)_localctx).str =  bufferClassStructure.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbstractClassStructureContext extends ParserRuleContext {
		public String str;
		public ClassNameContext className;
		public ParentClassContext parentClass;
		public ParentInterfacesContext parentInterfaces;
		public ClassElementContext classElement;
		public ParentClassContext parentClass() {
			return getRuleContext(ParentClassContext.class,0);
		}
		public ParentInterfacesContext parentInterfaces() {
			return getRuleContext(ParentInterfacesContext.class,0);
		}
		public ClassElementContext classElement(int i) {
			return getRuleContext(ClassElementContext.class,i);
		}
		public List<ClassElementContext> classElement() {
			return getRuleContexts(ClassElementContext.class);
		}
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public AbstractClassStructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abstractClassStructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).enterAbstractClassStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).exitAbstractClassStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NPPVisitor ) return ((NPPVisitor<? extends T>)visitor).visitAbstractClassStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AbstractClassStructureContext abstractClassStructure() throws RecognitionException {
		AbstractClassStructureContext _localctx = new AbstractClassStructureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_abstractClassStructure);
		StringBuilder bufferAbstractClassStructue = new StringBuilder();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(T__8);
			setState(145); match(T__25);
			setState(146); ((AbstractClassStructureContext)_localctx).className = className();
			setState(147); ((AbstractClassStructureContext)_localctx).parentClass = parentClass();
			setState(148); ((AbstractClassStructureContext)_localctx).parentInterfaces = parentInterfaces();
			setState(149); match(T__23);
			bufferAbstractClassStructue.append("abstract class " + (((AbstractClassStructureContext)_localctx).className!=null?_input.getText(((AbstractClassStructureContext)_localctx).className.start,((AbstractClassStructureContext)_localctx).className.stop):null) + ((AbstractClassStructureContext)_localctx).parentClass.str + " " + ((AbstractClassStructureContext)_localctx).parentInterfaces.str + "\n{\n");
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__30) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__3) | (1L << T__1) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(151); ((AbstractClassStructureContext)_localctx).classElement = classElement();
				bufferAbstractClassStructue.append(((AbstractClassStructureContext)_localctx).classElement.str + "\n");
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159); match(T__20);
			bufferAbstractClassStructue.append("}\n");
			}
			((AbstractClassStructureContext)_localctx).str =  bufferAbstractClassStructue.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceStructureContext extends ParserRuleContext {
		public String str;
		public InterfaceNameContext interfaceName;
		public ParentInterfacesContext parentInterfaces;
		public InterfaceElementContext interfaceElement;
		public InterfaceNameContext interfaceName() {
			return getRuleContext(InterfaceNameContext.class,0);
		}
		public ParentInterfacesContext parentInterfaces() {
			return getRuleContext(ParentInterfacesContext.class,0);
		}
		public List<InterfaceElementContext> interfaceElement() {
			return getRuleContexts(InterfaceElementContext.class);
		}
		public InterfaceElementContext interfaceElement(int i) {
			return getRuleContext(InterfaceElementContext.class,i);
		}
		public InterfaceStructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceStructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).enterInterfaceStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NPPListener ) ((NPPListener)listener).exitInterfaceStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NPPVisitor ) return ((NPPVisitor<? extends T>)visitor).visitInterfaceStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceStructureContext interfaceStructure() throws RecognitionException {
		InterfaceStructureContext _localctx = new InterfaceStructureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interfaceStructure);
		StringBuilder bufferInterfaceStructue = new StringBuilder();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); match(T__29);
			setState(163); ((InterfaceStructureContext)_localctx).interfaceName = interfaceName();
			setState(164); ((InterfaceStructureContext)_localctx).parentInterfaces = parentInterfaces();
			setState(165); match(T__23);
